update items add custom search terms fix typo

--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -111,11 +111,11 @@
                             <div class="col-2 toxicity text-left pr-0" id="fertilizerToxicity">0</div>
                         </div>
                         <div class="row">
-                            <div class="col-5 pr-0 armor-magic-label text-right">
-                                <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic_short }}</span>
-                                <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic }}</span>
+                            <div class="col-5 pr-0 aroma-magic-label text-right">
+                                <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aroma_magic_short }}</span>
+                                <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aroma_magic }}</span>
                             </div>
-                            <div class="col-2 armor-magic text-left pr-0" id="fertilizerArmorMagic">0</div>
+                            <div class="col-2 aroma-magic text-left pr-0" id="fertilizerAromaMagic">0</div>
                         </div>
                     </div>
                     <div class="col-lg-5 pl-lg-2 my-2">
