--- a/_includes/material-itemlist-table.html
+++ b/_includes/material-itemlist-table.html
@@ -15,7 +15,7 @@
         <th scope="col" data-priority="8" data-class-name="hardness-vitality">{{ site.data.strings.table.itemlist.col_hardness_vitality }}</th>
         <th scope="col" data-priority="9" data-class-name="stickiness-gusto">{{ site.data.strings.table.itemlist.col_stickiness_gusto }}</th>
         <th scope="col" data-priority="10" data-class-name="aesthetic-luck">{{ site.data.strings.table.itemlist.col_aesthetic_luck }}</th>
-        <th scope="col" data-priority="11" data-class-name="armor-magic">{{ site.data.strings.table.itemlist.col_armor_magic }}</th>
+        <th scope="col" data-priority="11" data-class-name="aroma-magic">{{ site.data.strings.table.itemlist.col_aroma_magic }}</th>
 
         <th scope="col" data-priority="3" data-class-name="immunity">{{ site.data.strings.table.itemlist.col_immunity }}</th>
         <th scope="col" data-priority="4" data-class-name="pesticide">{{ site.data.strings.table.itemlist.col_pesticide }}</th>
