--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -245,7 +245,7 @@ ul.pagination {
 .text-aroma {
     color: $aroma-color !important;
 }
-.armor-magic-label {
+.aroma-magic-label {
     color: $aroma-color;
 }
 
