--- a/_includes/site.html
+++ b/_includes/site.html
@@ -70,8 +70,7 @@
             <div class="form-group">
                 <button id="btnClearSession" class="btn btn-warning mx-1">{{ site.data.strings.misc.clear_session
                     }}</button>
-                <small id="btnClearSessionHelp" class="form-text text-muted">{{
-                    site.data.strings.misc.clear_session_help }}</small>
+                <small id="btnClearSessionHelp" class="form-text text-muted">{{site.data.strings.misc.clear_session_help }}</small>
             </div>
         </div>
     </div>
