--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -6,10 +6,10 @@ Double check Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6
 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSvJCglR8NvaDyvw3jhD5fVhRNJHvzFQnekpKI8EjiP1kDQSyCU1p-XeTUV3uhV3sSUUyjsv7t6gHui/pubhtml#">Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a><br />
 Thanks to <a href="https://www.reddit.com/user/Silly___Neko/">u/Silly___Neko</a> for providing me more Item Data with they <a href="https://github.com/LinkOFF7/sakunaTool">sakunaTool</a>.<br />
 <br />
-<a href="https://www.youtube.com/watch?v=bXKrfWCHUtU" target="_blank"><i class="fab fa-youtube"></i> ULTIMATE Rice Farming Guide for Beginners</a> by <a href="https://www.youtube.com/channel/UCtR-AuOdfGd26lRUD2CM8Cg" target="blank">Swrinny</a></br />
-<a href="https://www.reddit.com/r/sakunaofriceandruin/comments/k18q1i/sakuna_database/" target="_blank"><i class="fab fa-reddit"></i> Sakuna-Database-Spreadsheet</a> by <a href="https://www.reddit.com/user/WaafleCat" target="_blank">u/WaafleCat</a></br />
-<a href="https://www.reddit.com/r/sakunaofriceandruin/comments/kcj2y3/wip_spreadsheet_containing_recipes_for_cooking/" target="_blank"><i class="fab fa-reddit"></i> Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a> by <a href="https://www.reddit.com/user/quack-and-slash/" target="_blank">u/quack-and-slash</a></br />
+<a href="https://www.youtube.com/watch?v=bXKrfWCHUtU" target="_blank" rel="noopener"><i class="fab fa-youtube"></i> ULTIMATE Rice Farming Guide for Beginners</a> by <a href="https://www.youtube.com/channel/UCtR-AuOdfGd26lRUD2CM8Cg" target="blank" rel="noopener">Swrinny</a></br />
+<a href="https://www.reddit.com/r/sakunaofriceandruin/comments/k18q1i/sakuna_database/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> Sakuna-Database-Spreadsheet</a> by <a href="https://www.reddit.com/user/WaafleCat" target="_blank" rel="noopener">u/WaafleCat</a></br />
+<a href="https://www.reddit.com/r/sakunaofriceandruin/comments/kcj2y3/wip_spreadsheet_containing_recipes_for_cooking/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a> by <a href="https://www.reddit.com/user/quack-and-slash/" target="_blank" rel="noopener">u/quack-and-slash</a></br />
 <br/>
 Framing-Guide made with some tips from Swrinnys video, my own experience and the Farming Scrolls in game.
 <br/>
-Also checkout <a href="https://www.reddit.com/r/sakunaofriceandruin/"><i class="fab fa-reddit"></i> r/sakunaofriceandruin</a>.
+Also checkout <a href="https://www.reddit.com/r/sakunaofriceandruin/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> r/sakunaofriceandruin</a>.
