--- a/_includes/guide-space.html
+++ b/_includes/guide-space.html
@@ -21,7 +21,7 @@
                     src="{{ '/assets/img/little_far_apart.png' | relative_url }}"
                     alt="space-a-little-far-apart">
                 <div class="card-body">
-                    <h5 class="card-title">{{ site.data.strings.guide.spacing.little_far_apart.title }}</h5>
+                    <p class="card-title font-weight-bolder">{{ site.data.strings.guide.spacing.little_far_apart.title }}</p>
                     <p class="card-text">
                         {{ site.data.strings.guide.spacing.little_far_apart.description }}
                     </p>
@@ -38,7 +38,7 @@
                 <img class="img-fluid card-img-top" src="{{ '/assets/img/balanced.png' | relative_url }}"
                     alt="space-balanced">
                 <div class="card-body">
-                    <h5 class="card-title">{{ site.data.strings.guide.spacing.balanced.title }}</h5>
+                    <p class="card-title font-weight-bolder">{{ site.data.strings.guide.spacing.balanced.title }}</p>
                     <p class="card-text">
                         {{ site.data.strings.guide.spacing.balanced.description }}
                     </p>
@@ -57,7 +57,7 @@
                 <img class="img-fluid card-img-top" src="{{ '/assets/img/circle_balanced.png' | relative_url }}"
                     alt="space-circle_balanced">
                 <div class="card-body">
-                    <h5 class="card-title">{{ site.data.strings.guide.spacing.circle.title }}</h5>
+                    <p class="card-title font-weight-bolder">{{ site.data.strings.guide.spacing.circle.title }}</p>
                     <p class="card-text">
                         {{ site.data.strings.guide.spacing.circle.description }}
                     </p>
