--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,10 +1,10 @@
 <hr class="mt-5">
 <h3>Credit</h3>
 
-Item-List from <a href="https://strategywiki.org/wiki/Sakuna:_Of_Rice_and_Ruin/Items" target="_blank">StrategyWiki</a> and my own playthrough.<br />
-Double check Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6SWQk3hALlK9geAIRLWZxGf7z4qqJWTfP2KOY" target="_blank">Sakuna-Database-Spreadsheet</a> and
-<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSvJCglR8NvaDyvw3jhD5fVhRNJHvzFQnekpKI8EjiP1kDQSyCU1p-XeTUV3uhV3sSUUyjsv7t6gHui/pubhtml#">Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a><br />
-Thanks to <a href="https://www.reddit.com/user/Silly___Neko/">u/Silly___Neko</a> for providing me more Item Data with they <a href="https://github.com/LinkOFF7/sakunaTool">sakunaTool</a>.<br />
+Item-List from <a href="https://strategywiki.org/wiki/Sakuna:_Of_Rice_and_Ruin/Items" target="_blank" rel="noopener">StrategyWiki</a> and my own playthrough.<br />
+Double check Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6SWQk3hALlK9geAIRLWZxGf7z4qqJWTfP2KOY" target="_blank" rel="noopener">Sakuna-Database-Spreadsheet</a> and
+<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSvJCglR8NvaDyvw3jhD5fVhRNJHvzFQnekpKI8EjiP1kDQSyCU1p-XeTUV3uhV3sSUUyjsv7t6gHui/pubhtml#" target="_blank" rel="noopener">Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a><br />
+Thanks to <a href="https://www.reddit.com/user/Silly___Neko/">u/Silly___Neko</a> for providing me more Item Data with they <a href="https://github.com/LinkOFF7/sakunaTool" target="_blank" rel="noopener">sakunaTool</a>.<br />
 <br />
 <a href="https://www.youtube.com/watch?v=bXKrfWCHUtU" target="_blank" rel="noopener"><i class="fab fa-youtube"></i> ULTIMATE Rice Farming Guide for Beginners</a> by <a href="https://www.youtube.com/channel/UCtR-AuOdfGd26lRUD2CM8Cg" target="blank" rel="noopener">Swrinny</a></br />
 <a href="https://www.reddit.com/r/sakunaofriceandruin/comments/k18q1i/sakuna_database/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> Sakuna-Database-Spreadsheet</a> by <a href="https://www.reddit.com/user/WaafleCat" target="_blank" rel="noopener">u/WaafleCat</a></br />
