--- a/_sass/_custom_dark.scss
+++ b/_sass/_custom_dark.scss
@@ -16,7 +16,12 @@
     }
 }
 
+.table-success,
 .table-warning {
+    color: $gray-800;
+}
+
+.table-danger {
     color: $black;
 }
 
@@ -27,4 +32,19 @@
 .list-group-item-warning,
 .list-group-item-info {
     color: $black;
+}
+
+.text-primary {
+    //color: #f8483f !important;
+    color: lighten($primary, 30%) !important;
+}
+
+.text-secondary {
+    //color: #af7e7c  !important;
+    color: lighten($secondary, 20%) !important;
+}
+
+.text-danger {
+    //color: #ff3e3d !important;
+    color: lighten($danger, 30%) !important;
 }
