--- a/_sass/_variables_dark.scss
+++ b/_sass/_variables_dark.scss
@@ -14,14 +14,14 @@ $blue: #375a7f;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #e83e8c;
-$red: #ef0100;
+$red: rgb(224, 12, 11);
 $orange: #fd7e14;
 $yellow: #f39c12;
 $green: rgb(23, 182, 46);
 $teal: #20c997;
 $cyan: #3498db;
-$primary: #912a25;
-$secondary: #D1765E;
+$primary: rgb(143, 45, 41);
+$secondary: rgb(134, 62, 59);
 $success: $green;
 $info: rgb(23, 176, 182);
 $warning: rgb(204, 212, 28);
@@ -31,14 +31,14 @@ $dark: $gray-800;
 $yiq-contrasted-threshold: 175;
 $body-bg: $gray-900;
 $body-color: $white;
-$link-color: rgb(162, 48, 44);
+$link-color: #ff645f;
 $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-size-base: .9375rem;
 $font-size-sm: $font-size-base * .88;
 $h1-font-size: 3rem;
 $h2-font-size: 2.5rem;
 $h3-font-size: 2rem;
-$text-muted: $gray-600;
+$text-muted: $gray-500;
 $table-accent-bg: $gray-800;
 $table-border-color: $gray-700;
 $input-border-color: $body-bg;
@@ -59,15 +59,15 @@ $nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color
 $nav-tabs-link-active-color: $white;
 $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
 $navbar-padding-y: 1rem;
-$navbar-dark-color: rgba($white, .6);
+$navbar-dark-color: rgba($white, .75);
 $navbar-dark-hover-color: $white;
-$navbar-light-color: rgba($gray-900, .7);
+$navbar-light-color: rgba($gray-900, .75);
 $navbar-light-hover-color: $gray-900;
 $navbar-light-active-color: $gray-900;
 $navbar-light-toggler-border-color: rgba($gray-900, .1);
 $pagination-border-width: 0;
 $jumbotron-bg: $gray-800;
-$card-cap-bg: $gray-700;
+$card-cap-bg: $gray-800;
 $popover-bg: $gray-800;
 $popover-header-bg: $gray-700;
 $toast-background-color: $gray-700;
@@ -79,12 +79,12 @@ $progress-bg: $gray-700;
 $list-group-bg: $gray-800;
 $list-group-border-color: $gray-700;
 $list-group-hover-bg: $gray-700;
-$breadcrumb-bg: $gray-700;
+$breadcrumb-bg: $gray-800;
 $close-color: $white;
 $close-text-shadow: none;
 $pre-color: inherit;
-$card-bg: $gray-800;
-$link-hover-color: lighten($link-color, 15%);
+$card-bg: $gray-900;
+$link-hover-color: lighten($link-color, 18%);
 $list-group-disabled-color: $gray-700;
 $list-group-action-color: $gray-600;
 $pagination-color: $white;
@@ -94,3 +94,5 @@ $pagination-active-bg: $primary;
 $pagination-active-color: $white;
 $list-group-active-color: $white;
 $dropdown-link-active-color: $white;
+$pagination-hover-color: $black;
+$breadcrumb-active-color: $gray-500;
