--- a/_sass/_custom_variables_dark.scss
+++ b/_sass/_custom_variables_dark.scss
@@ -1,18 +1,18 @@
 $nav-tabs-bg-color: #a3938a !default;
 
-$winter-color: #6571b0 !default;
+$winter-color: #7782bb !default;
 $spring-color: #72b941 !default;
 $summer-color: #d2ae3f !default;
-$autumn-color: #bb4c4c !default;
+$autumn-color: #c75d5d !default;
 
 $balanced-color: #543cdb !default;
 $yield-color: #21a437 !default;
 $heartiness-color: #db963c !default;
-$aesthetic-color: #db3c3c !default;
-$aroma-color: #9b3cdb !default;
+$aesthetic-color: #fa4545 !default;
+$aroma-color: #bc59ff !default;
 
-$placements-1-1-color: $spring-color !default;
+$placements-1-1-color: #8393e4 !default;
 $placements-2-1-color: $summer-color !default;
-$placements-1-3-color: $autumn-color !default;
+$placements-1-3-color: #fc6666 !default;
 $placements-2-2-color: $winter-color !default;
-$placements-circle-color: $spring-color !default;
+$placements-circle-color: #8393e4 !default;
