--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,14 +1,16 @@
 <hr class="mt-5">
-<h3>Credit</h3>
+<h2>Credit</h2>
 
 Item-List from <a href="https://strategywiki.org/wiki/Sakuna:_Of_Rice_and_Ruin/Items" target="_blank" rel="noopener">StrategyWiki</a> and my own playthrough.<br />
-Double check Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6SWQk3hALlK9geAIRLWZxGf7z4qqJWTfP2KOY" target="_blank" rel="noopener">Sakuna-Database-Spreadsheet</a> and
-<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSvJCglR8NvaDyvw3jhD5fVhRNJHvzFQnekpKI8EjiP1kDQSyCU1p-XeTUV3uhV3sSUUyjsv7t6gHui/pubhtml#" target="_blank" rel="noopener">Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a><br />
+Double checked some Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6SWQk3hALlK9geAIRLWZxGf7z4qqJWTfP2KOY" target="_blank" rel="noopener">Sakuna-Database-Spreadsheet</a>,
+<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSvJCglR8NvaDyvw3jhD5fVhRNJHvzFQnekpKI8EjiP1kDQSyCU1p-XeTUV3uhV3sSUUyjsv7t6gHui/pubhtml#" target="_blank" rel="noopener">Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a> and
+<a href="https://docs.google.com/spreadsheets/d/104uNPwSBC3_sznxLfXloMIR-deRkG2W09UE8c10HvdE" target="_blank" rel="noopener">sheet for recipes</a>.<br />
 Thanks to <a href="https://www.reddit.com/user/Silly___Neko/">u/Silly___Neko</a> for providing me more Item Data with they <a href="https://github.com/LinkOFF7/sakunaTool" target="_blank" rel="noopener">sakunaTool</a>.<br />
 <br />
 <a href="https://www.youtube.com/watch?v=bXKrfWCHUtU" target="_blank" rel="noopener"><i class="fab fa-youtube"></i> ULTIMATE Rice Farming Guide for Beginners</a> by <a href="https://www.youtube.com/channel/UCtR-AuOdfGd26lRUD2CM8Cg" target="blank" rel="noopener">Swrinny</a></br />
 <a href="https://www.reddit.com/r/sakunaofriceandruin/comments/k18q1i/sakuna_database/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> Sakuna-Database-Spreadsheet</a> by <a href="https://www.reddit.com/user/WaafleCat" target="_blank" rel="noopener">u/WaafleCat</a></br />
 <a href="https://www.reddit.com/r/sakunaofriceandruin/comments/kcj2y3/wip_spreadsheet_containing_recipes_for_cooking/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> Spreadsheet Containing Recipes For Cooking, Processing, and Fertilizer Buffs</a> by <a href="https://www.reddit.com/user/quack-and-slash/" target="_blank" rel="noopener">u/quack-and-slash</a></br />
+<a href="https://www.reddit.com/r/sakunaofriceandruin/comments/khlxaz/so_i_made_a_sheet_for_recipes/" target="_blank" rel="noopener"><i class="fab fa-reddit"></i> sheet for recipes</a> by <a href="https://www.reddit.com/user/tenachiasaca/" target="_blank" rel="noopener">u/tenachiasaca</a></br />
 <br/>
 Framing-Guide made with some tips from Swrinnys video, my own experience and the Farming Scrolls in game.
 <br/>
