--- a/_includes/site.html
+++ b/_includes/site.html
@@ -64,12 +64,12 @@
     </section>
 </section>
 
-<section id="sectionMisc" class="mt-5 mx-4">
-    <div class="row">
+<section id="sectionMisc" class="mt-5">
+    <h2>{{ site.data.strings.misc.title }}</h2>
+    <div class="row mx-1">
         <div class="col-4">
             <div class="form-group">
-                <button id="btnClearSession" class="btn btn-warning mx-1">{{ site.data.strings.misc.clear_session
-                    }}</button>
+                <button id="btnClearSession" class="btn btn-warning">{{ site.data.strings.misc.clear_session }}</button>
                 <small id="btnClearSessionHelp" class="form-text text-muted">{{site.data.strings.misc.clear_session_help }}</small>
             </div>
         </div>
