--- a/_sass/_custom_variables_dark.scss
+++ b/_sass/_custom_variables_dark.scss
@@ -5,14 +5,14 @@ $spring-color: #72b941 !default;
 $summer-color: #d2ae3f !default;
 $autumn-color: #c75d5d !default;
 
-$balanced-color: #543cdb !default;
+$balanced-color: #8974ff !default;
 $yield-color: #21a437 !default;
 $heartiness-color: #db963c !default;
 $aesthetic-color: #fa4545 !default;
 $aroma-color: #bc59ff !default;
 
-$placements-1-1-color: #8393e4 !default;
+$placements-1-1-color: $spring-color !default;
 $placements-2-1-color: $summer-color !default;
 $placements-1-3-color: #fc6666 !default;
 $placements-2-2-color: $winter-color !default;
-$placements-circle-color: #8393e4 !default;
+$placements-circle-color: $spring-color !default;
