add links in navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,16 @@
         <a class="nav-link" href="#sectionItemList">{{ site.data.strings.item_list.title }}</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#sectionItemListMaterials">{{ site.data.strings.item_list.materials.title }}</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#sectionItemListIngredients">{{ site.data.strings.item_list.ingredients.title }}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#sectionItemListFood">{{ site.data.strings.item_list.food.title }}</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#sectionMisc">{{ site.data.strings.misc.title }}</a>
       </li>
       <li class="nav-item">
         <div class="checkbox mx-3 mt-1">
